--- a/tasty.ini
+++ b/tasty.ini
@@ -1,6 +1,5 @@
 [program:tasty]
-command=/usr/local/bin/usenv /opt/echonest/tastyenv python /opt/echonest/tasty-server/src/local.py --port=8080 --config=/opt/echonest/tasty-server/src/tasty.conf
-directory=/opt/echonest/tasty-server
+command=/usr/local/bin/usenv /opt/tasty-server/current_env python /opt/tasty-server/current_bundle/src/local.py --port=8080 --config=/etc/tasty.conf
 redirect_stderr=true
 stdout_logfile=/var/log/tasty-server.log
 stdout_logfile_maxbytes=104857600
